demo: Ensure metadata does not overflow 320 x 320 screen

--- a/web/packages/demo/www/index.css
+++ b/web/packages/demo/www/index.css
@@ -145,8 +145,8 @@ body {
     margin: 15vh auto;
     padding: 20px;
     border: 1px solid #666;
-    width: 320px;
-    height: 280px;
+    width: 300px;
+    height: 270px;
     overflow: auto;
 }
 
@@ -159,7 +159,7 @@ body {
 }
 
 #metadata {
-    margin: 40px auto 0;
+    margin: 0 auto;
 }
 
 #metadata td {
